# flipoff

./: README.md  flake.nix  flipoff.py  pyproject.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml
docs/: README.md
src/flipoff/: __init__.py  __main__.py  cli.py  detector.py  events.py  gesture.py
