[project]
name = "flipoff"
version = "0.1.0"
description = "Begone, clanker"
requires-python = ">=3.11"
dependencies = ["mediapipe", "opencv-contrib-python", "dbus-next", "numpy"]

[dependency-groups]
dev = ["black>=26.3.1", "isort>=8.0.1", "mypy>=1.20.0"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
force_single_line = true
force_sort_within_sections = true
known_first_party = []
known_third_party = ["cv2", "dbus_next", "mediapipe"]
lines_after_imports = 2
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[tool.basedpyright]
typeCheckingMode = "off"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
