[project]
name = "flipoff"
version = "1.0.0"
description = "Begone, clanker"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
  "mediapipe>=0.10.33",
  "opencv-contrib-python>=4.13.0",
  "dbus-next>=0.2.3",
  "numpy>=2.4.4",
]

[project.optional-dependencies]
dev = ["black>=26.3.1", "isort>=8.0.1", "mypy>=1.20.0"]

[project.scripts]
flipoff = "flipoff.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["black>=26.3.1", "isort>=8.0.1", "mypy>=1.20.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/flipoff"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
force_single_line = true
force_sort_within_sections = true
known_first_party = []
known_third_party = ["cv2", "dbus_next", "mediapipe"]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

[tool.basedpyright]
typeCheckingMode = "off" # too overzealous
